Refactor: Migrate to Biome for linting and formatting
This commit replaces ESLint with Biome for code linting and formatting
across the project.

The following changes were made:
- Removed ESLint and related configurations (`.eslintignore`,
  `.eslintrc.js`, `.eslintrc.json`).
- Added Biome configuration files (`.biomeignore`, `.biome.json`).
- Updated `package.json` scripts in all apps to use `biome` commands for
  linting and formatting.
- Updated `pnpm-lock.yaml` and `bun.lock` (if applicable) to include
  Biome as a dev dependency.

--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -10,8 +10,8 @@
     "start": "node dist/index.js",
     "clean": "rm -rf dist",
     "type-check": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.tsx",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix"
+    "lint": "biome check src",
+    "lint:fix": "biome check --write src"
   },
   "dependencies": {
     "@hyperdash/shared-types": "workspace:*",
