--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,9 +14,10 @@
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/react-form": "^0.36.0",
     "@tanstack/react-query": "^5.0.0",
-    "@tanstack/react-router": "^1.0.0",
+    "@tanstack/react-router": "^1.143.6",
     "@tanstack/react-table": "^8.20.0",
     "@tanstack/react-virtual": "^3.0.0",
+    "@tanstack/router-core": "^1.143.6",
     "@tanstack/router-plugin": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -33,12 +34,15 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@tanstack/react-devtools": "^0.8.6",
+    "@tanstack/react-router-devtools": "^1.143.6",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.0",
     "typescript": "^5.4.0",
     "vite": "^5.2.0",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "web-vitals": "^5.1.0"
   }
 }
