Refactor: Simplify .env.example and remove unused routes
This commit simplifies the `.env.example` file by removing obsolete
configurations and renaming some variables for clarity.

Additionally, it removes several unused routes from the API gateway
(`analytics.ts`, `market.ts`, `market/index.ts`) and the corresponding

--- a/.env.example
+++ b/.env.example
@@ -1,93 +1,33 @@
-# =============================================================================
-# HyperDash Platform Environment Configuration
-# =============================================================================
-# Copy this file to .env and update the values
+# Hyperliquid Copy Trading Platform
 
-# =============================================================================
-# Application
-# =============================================================================
-NODE_ENV=development
-LOG_LEVEL=debug
-
-# =============================================================================
-# Database (PostgreSQL)
-# =============================================================================
+# Database
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/hyperdash
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=hyperdash
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/hyperdash
 
-# =============================================================================
-# Database (ClickHouse)
-# =============================================================================
-CLICKHOUSE_HOST=localhost
-CLICKHOUSE_PORT=8123
-CLICKHOUSE_DATABASE=hyperdash
-CLICKHOUSE_USER=default
-CLICKHOUSE_PASSWORD=
-CLICKHOUSE_URL=http://localhost:8123
-
-# =============================================================================
-# Cache (Redis)
-# =============================================================================
+# Redis
+REDIS_URL=redis://localhost:6379
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
-REDIS_URL=redis://localhost:6379
 
-# =============================================================================
-# Message Queue (Kafka)
-# =============================================================================
-KAFKA_BROKERS=localhost:9092
-KAFKA_CLIENT_ID=hyperdash-platform
-
-# =============================================================================
-# Authentication
-# =============================================================================
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# Auth
+JWT_SECRET=your-super-secret-jwt-key-change-this
 JWT_EXPIRES_IN=24h
-REFRESH_TOKEN_SECRET=your-super-secret-refresh-token-key-change-this-in-production
-REFRESH_TOKEN_EXPIRES_IN=7d
 
-# =============================================================================
 # API Gateway
-# =============================================================================
-API_GATEWAY_PORT=3000
-API_GATEWAY_HOST=localhost
-API_GATEWAY_CORS_ORIGINS=http://localhost:3001,http://localhost:3000
+API_PORT=3000
 
-# =============================================================================
-# Web Application
-# =============================================================================
-WEB_PORT=3001
-WEB_HOST=localhost
+# Web
+WEB_PORT=5173
 NEXT_PUBLIC_API_URL=http://localhost:3000
-NEXT_PUBLIC_WS_URL=ws://localhost:3000
 
-# =============================================================================
-# Data Ingestion
-# =============================================================================
-DATA_INGESTION_PORT=3003
+# Copy Engine
+COPY_ENGINE_PORT=3006
+
+# Hyperliquid API
 HYPERLIQUID_API_URL=https://api.hyperliquid.xyz/info
 HYPERLIQUID_WS_URL=wss://api.hyperliquid.xyz/ws
-
-# =============================================================================
-# Analytics
-# =============================================================================
-ANALYTICS_PORT=3004
-
-# =============================================================================
-# Billing
-# =============================================================================
-BILLING_PORT=3005
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
-STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
-
-# =============================================================================
-# Copy Engine
-# =============================================================================
-COPY_ENGINE_PORT=3006
-COPY_ENGINE_HOST=localhost
