--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -8,9 +8,7 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
-    "migrate": "npm run migrate:postgres && npm run migrate:clickhouse",
-    "migrate:postgres": "cd postgres && npm run migrate",
-    "migrate:clickhouse": "cd clickhouse && npm run migrate",
+    "migrate": "cd postgres && npm run migrate",
     "seed": "cd postgres && npm run seed",
     "type-check": "tsc --noEmit",
     "lint": "biome check src",
